@@ -3,7 +3,6 @@ AlterTableAction.error.wrongobjcount=Tou must select only one table for this opt
 RenameTableAction.newnameprompt=Enter the new name for {0}
 RenameTableAction.rename=Rename
 
-RenameTableCommand.cmd=rename table {0} to {1}
 
 #
 #Missing/changed properties generated by I18n Plugin on Sat Oct 29 20:19:53 CEST 2005
